[package]
name = "configrs"
version = "0.2.0"
edition = "2024"
authors = ["Muhammad Fathir Irhas <fathir.irhas@gmail.com>"]
description = "Configuration library"
license = "MIT"
repository = "https://github.com/mfirhas/configrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env-file-reader = "0.3.*"
toml = "0.8.*"
serde_yaml = "0.9.*"

[dev-dependencies]
once_cell = "1.19.0"
lazy_static = "1.4.0"
